# parquet-cpp

./: .clang-tidy  .gitignore  .travis.yml  BUILD  CHANGELOG  CMakeLists.txt  KEYS  LICENSE.txt  Makefile  NOTICE.txt  README.md  TODO  appveyor.yml  setup_build_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: CMakeLists.txt  decode_benchmark.cc
build-support/: clang_format_exclusions.txt  collect_coverage.py  linux-toolchain.py  osx-toolchain.py  run-clang-format.sh  run-clang-tidy.sh  run-test.sh  stacktrace_addr2line.pl  travis-setup.sh
ci/: before_script_travis.sh  msvc-build.bat  run_tests.sh  travis_conda_build.sh  travis_script_cpp.sh  travis_script_static.sh  travis_script_toolchain.sh  upload_coverage.sh
cmake_modules/: ArrowExternalProject.cmake  BuildUtils.cmake  CompilerInfo.cmake  FindArrow.cmake  FindBrotli.cmake  FindClangTools.cmake  FindGFlags.cmake  FindGLog.cmake  FindGTest.cmake  FindLz4.cmake  FindSnappy.cmake  FindThrift.cmake  FindZLIB.cmake  SetupCxxFlags.cmake  SnappyCMakeLists.txt  SnappyConfig.h  ThirdpartyToolchain.cmake  clean-all.cmake  parquet-cppConfig.cmake.in  toolchain.cmake
conda.recipe/: build.sh  meta.yaml
data/: alltypes.parquet  dremel.parquet  list.parquet  struct.parquet
dev/: README.md  committers-guide.md
dev/release/: README.md  changelog  release  release-candidate  run-rat.sh  verify-release-candidate  verify-release-candidate.bat
docs/: Windows.md
example/: CMakeLists.txt  compute_stats.cc  decode_benchmark.cc  dump-metadata.cc  example_util.cc  example_util.h  generic-record-test.cc  parquet-dump-schema.cc  parquet-record-reader.cc  parquet_reader.cc
examples/: CMakeLists.txt  reader-writer.cc
examples/low-level-api/: CMakeLists.txt  encryption-reader-writer.cc  reader-writer.cc  reader-writer2.cc  reader_writer.h
examples/parquet-arrow/src/: reader-writer.cc
parquet-format/: parquet.thrift
src/: CMakeLists.txt  bool-encoding.h  delta-bit-pack-encoding.h  delta-byte-array-encoding.h  delta-length-byte-array-encoding.h  dictionary-encoding.h  encodings.h  generic-record.cc  parquet.cc  plain-encoding.h  schema.cc  util.cc
src/compression/: CMakeLists.txt  codec.h  gzip-codec.cc  lz4-codec.cc  snappy-codec.cc  snappy-decompressor.cc
src/encodings/: bool-encoding.h  delta-bit-pack-encoding.cc  delta-bit-pack-encoding.h  delta-byte-array-encoding.h  delta-length-byte-array-encoding.h  dictionary-encoding.h  encodings.h  plain-encoding.h
src/impala/: bit-stream-utils.h  bit-stream-utils.inline.h  bit-util.h  compiler-util.h  logging.h  rle-encoding.h
src/parquet/: CMakeLists.txt  README  bloom-test.cc  bloom.cc  bloom.h  bloom_filter-test.cc  bloom_filter.cc  bloom_filter.h  bloom_filter_algorithm.cc  bloom_filter_algorithm.h  column-io-benchmark.cc  column_page.h  column_reader.cc  column_reader.h  column_scanner.cc  column_scanner.h  column_writer-test.cc  column_writer.cc  column_writer.h  compression.cc  compression.h  decryption_key_retriever.cc  decryption_key_retriever.h  encoding-internal.h  encoding.h  encryption.cc  file-deserialize-test.cc  file_reader-internal.cc  file_reader.cc  file_writer.cc  file_writer.h  generic-record.h  hasher.h  metadata-test.cc  metadata.cc  metadata.h  murmur3.cc  murmur3.h  parquet-types-test.cc  parquet.h  (+22 more)
src/parquet/api/: reader.h  writer.h
src/parquet/arrow/: CMakeLists.txt  arrow-io-test.cc  arrow-reader-writer-benchmark.cc  arrow-reader-writer-test.cc  arrow-schema-test.cc  deserializer.cc  deserializer.h  io.cc  io.h  reader.cc  reader.h  record_reader.cc  schema.cc  schema.h  test-util.h  utils.h  writer.cc  writer.h
src/parquet/column/: CMakeLists.txt  column-io-benchmark.cc  column-reader-test.cc  column-writer-test.cc  level-benchmark.cc  levels-test.cc  levels.cc  levels.h  page.h  properties-test.cc  properties.h  reader.cc  reader.h  scan-all.cc  scan-all.h  scanner-test.cc  scanner.cc  scanner.h  serialized-page.cc  serialized-page.h  statistics-test.cc  statistics.cc  statistics.h  test-specialization.h  test-util.h  write-all.cc  write-all.h  writer.cc  writer.h
src/parquet/compression/: CMakeLists.txt  brotli-codec.cc  codec-test.cc  codec.h  gzip-codec.cc  lz4-codec.cc  snappy-codec.cc
src/parquet/encodings/: bool-encoding.h  decoder.h  delta-bit-pack-encoding.h  delta-byte-array-encoding.h  delta-length-byte-array-encoding.h  dictionary-encoding.h  encoder.h  encoding-benchmark.cc  encoding-test.cc  encodings.h  plain-encoding-test.cc  plain-encoding.h
src/parquet/file/: file-deserialize-test.cc  file-metadata-test.cc  file-serialize-test.cc  metadata-internal.cc  metadata.cc  metadata.h  printer.cc  printer.h  reader-internal.cc  reader-internal.h  reader.cc  reader.h  writer-internal.cc  writer-internal.h  writer.cc  writer.h
src/parquet/schema/: CMakeLists.txt  builder.h  converter.cc  converter.h  descriptor.cc  descriptor.h  printer.cc  printer.h  schema-builder-test.cc  schema-converter-test.cc  schema-descriptor-test.cc  schema-printer-test.cc  schema-types-test.cc  test-util.h  types.cc  types.h
src/parquet/thrift/: CMakeLists.txt  serializer-test.cc  util.h
src/parquet/util/: CMakeLists.txt  bit-stream-utils.h  bit-stream-utils.inline.h  bit-util.h  bpacking.h  buffer.cc  buffer.h  comparison-test.cc  comparison.cc  comparison.h  cpu-info.cc  cpu-info.h  crypto.cc  crypto.h  dict-encoding.h  dict-test.cc  input-output-test.cc  input-test.cc  input.cc  input.h  input_stream.cc  input_stream.h  logging.h  mem-allocator-test.cc  mem-allocator.cc  mem-allocator.h  mem-pool.cc  memory-test.cc  memory.cc  memory.h  output-test.cc  output.cc  output.h  rle-encoding.h  rle-test.cc  schema-util.h  sse-util.h  stopwatch.h  test-common.h
src/util/: stopwatch.h
tools/: parquet-dump-schema.cc  parquet-scan.cc  parquet_reader.cc
